--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <p>Fan of Banana<p>
         </p>Monkey</p>
         <p>Son of daddy</p>
-        <p>Best friend of hannah </p>
+        <p>Sugar kid</p>
+        </h2>Ja 3 Owner</h2>
+        <img 
+            src="https://www.nike.com/tw/t/ja-3-light-show-ep-%E7%B1%83%E7%90%83-YZZZJPiv"
+        />
     </body>
 </html>
