--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         </p>Monkey</p>
         <p>Son of daddy</p>
         <p>Sugar kid</p>
-        </h2>Ja 3 Owner</h2>
+        <h2>Ja 3 Owner</h2>
         <img 
-            src="https://www.nike.com/tw/t/ja-3-light-show-ep-%E7%B1%83%E7%90%83-YZZZJPiv"
+            src="https://static.nike.com/a/images/t_PDP_936_v1/f_auto,q_auto:eco/69503ed9-a6af-4ba2-8961-91b366bf3805/JA+3+EP.png"
         />
     </body>
 </html>
